--- a/src/app/theme/components/search/search.component.scss
+++ b/src/app/theme/components/search/search.component.scss
@@ -1,91 +1,106 @@
 /* container */
 .c {
-    position: fixed;
-    top: 8vh;
-    left: 50vw;
-    transform: translate(-50%,-50%);
-    transition: all 1s;
-    width: 50px;
-    height: 50px;
-    background: white;
-    box-sizing: border-box;
-    border-radius: 25px;
-    border: 4px solid white;
-    padding: 5px;
+  position: fixed;
+  top: 8vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  transition: all 1s;
+  width: 50px;
+  height: 50px;
+  background: white;
+  box-sizing: border-box;
+  border-radius: 25px;
+  border: 4px solid white;
+  padding: 5px;
 }
 
 .c_s {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;;
-    height: 42.5px;
-    line-height: 30px;
-    outline: 0;
-    border: 0;
-    display: none;
-    font-size: 1em;
-    border-radius: 20px;
-    padding: 0 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 42.5px;
+  line-height: 30px;
+  outline: 0;
+  border: 0;
+  display: none;
+  font-size: 1em;
+  border-radius: 20px;
+  padding: 0 20px;
 }
 
 .c_c_i,
 .c_s_i {
-    box-sizing: border-box;
-    padding: 10px;
-    width: 42.5px;
-    height: 42.5px;
-    position: absolute;
-    top: 0;
-    border-radius: 50%;
-    color: #07051a;
-    text-align: center;
-    font-size: 1.2em;
-    transition: all 1s;
+  box-sizing: border-box;
+  padding: 10px;
+  width: 42.5px;
+  height: 42.5px;
+  position: absolute;
+  top: 0;
+  border-radius: 50%;
+  color: #07051a;
+  text-align: center;
+  font-size: 1.2em;
+  transition: all 1s;
 }
 
 .c_c_i {
-    right: 45px;
+  right: 45px;
 }
 .c_s_i {
-    right: 0px;
+  right: 0px;
 }
 
 .c:hover,
-.focused{
-    width: 40vw;
-    cursor: pointer;
+.focused {
+  width: 40vw;
+  cursor: pointer;
 }
 
 .c:hover .c_s,
-.focused .c_s{
-    display: block;
+.focused .c_s {
+  display: block;
 }
 
 .c:hover nb-icon,
-.focused nb-icon{
-    background: #07051a;
-    color: white;
+.focused nb-icon {
+  background: #07051a;
+  color: white;
 }
 
 /* visualization container */
 .v_c {
-    position: fixed;
-    top: 15%;
-    left: 10%;
-    width: 80%;
-    height: 60%;
-    background: white;
-    border-radius: 20px;
-    padding: 1vh 1vw;
+  position: fixed;
+  top: 15%;
+  left: 7%;
+  width: 70%;
+  height: 60%;
+  background: white;
+  border-radius: 20px;
+  padding: 1vh 1vw;
 }
 
 /* search container */
 .s_c {
-    height: 100vh;
-    width: 100vw;
-    background: rgba(172, 172, 172, 0.8);
-    position: fixed;
-    top: 0;
-    right: 0;
+  height: 100vh;
+  width: 100vw;
+  background: rgba(172, 172, 172, 0.8);
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+/* visualization container editor */
+.v_c_e {
+  position: fixed;
+  top: 15%;
+  left: 80%;
+  width: 17%;
+  background: white;
+}
+
+/* visualization container editor chart */
+.v_c_e_c {
+  height: 30px;
+  width: 30px;
 }
