--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,68 +1,68 @@
-@import 'themes';
+@import "themes";
 
-@import '~@nebular/theme/styles/globals';
+@import "~@nebular/theme/styles/globals";
 
 @include nb-install() {
   @include nb-theme-global();
-};
+}
 /* You can add global styles to this file, and also import other style files */
 body {
-    margin: 0;
-    font-family: 'Noto Sans', sans-serif;
+  margin: 0;
+  font-family: "Noto Sans", sans-serif;
 }
 
-input[type=checkbox] {
-    width: 0;
-    height: 0;
-    appearance: none;
+input[type="checkbox"] {
+  width: 0;
+  height: 0;
+  appearance: none;
 }
 
-input[type=checkbox]::after {
-    content: '';
-    width: 1.3vw;
-    height: 1.3vw;
-    border: 0.15vw solid;
-    border-radius: 0.2vw;
-    display: block;
-    box-shadow: 0 0.1vw 0.2vw -0.1vw;
-    cursor: pointer;
-    top: -0.7vw;
-    position: relative;
+input[type="checkbox"]::after {
+  content: "";
+  width: 1.3vw;
+  height: 1.3vw;
+  border: 0.15vw solid;
+  border-radius: 0.2vw;
+  display: block;
+  box-shadow: 0 0.1vw 0.2vw -0.1vw;
+  cursor: pointer;
+  top: -0.7vw;
+  position: relative;
 }
 
-input[type=checkbox]:checked::after {
-    color: #70F07F;
-    content: '\2219';
-    font-size: 2vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 0.3vw;
-    height: 1vw;
+input[type="checkbox"]:checked::after {
+  color: #70f07f;
+  content: "\2219";
+  font-size: 2vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 0.3vw;
+  height: 1vw;
 }
 
-input[type=checkbox]:focus {
-    outline: none;
+input[type="checkbox"]:focus {
+  outline: none;
 }
 
-input[type=checkbox] + label {
-    margin-left: 2vw;
-    cursor: pointer;
+input[type="checkbox"] + label {
+  margin-left: 2vw;
+  cursor: pointer;
 }
 
 .input_container {
-    padding: 0.5vw;
+  padding: 0.5vw;
 }
 
 .input_container.checkbox {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 @mixin shadow {
-    box-shadow: 0 0.2vw 1vw -0.2vw;
+  box-shadow: 0 0.2vw 1vw -0.2vw;
 }
 
 .particles-container {
-    z-index: auto!important;
+  z-index: auto !important;
 }
