--- a/src/app/theme/components/visualization-editor/visualization-editor.component.scss
+++ b/src/app/theme/components/visualization-editor/visualization-editor.component.scss
@@ -26,3 +26,13 @@
 .v_i_n {
   color: #8a8a8a;
 }
+
+/* visualization settings */
+.vs {
+  display: flex;
+  flex-direction: column;
+}
+
+.vs_i {
+  margin: 5px;
+}
